--- a/.github/workflows/x8-single-test.yaml
+++ b/.github/workflows/x8-single-test.yaml
@@ -95,30 +95,45 @@ jobs:
           fi
           echo "--- End of raw response check ---"
 
-      - name: Run x8 and capture output (with verbose and exit code check)
+      - name: Run x8 with verbose output and stderr capture
         run: |
-          TARGET_URL=$(cat target_url.txt)
-          PARAM_WORDLIST_FILE="param_wordlist.txt"
+          mkdir -p x8-results-${{ matrix.chunk }} # اگر در تست ورکفلو ندارید، حذف کنید
+          # Set locale to ensure consistent environment
+          export LANG=en_US.UTF-8
+          export LC_ALL=en_US.UTF-8
+          
+          # Create input files (if not already done by previous steps)
+          echo "https://bigdav.ir/test.php" > target_url.txt
+          echo "category" > param_wordlist.txt
 
-          echo "Running x8 against $TARGET_URL with wordlist file $PARAM_WORDLIST_FILE"
-          echo "Attempting to run x8 with -v (verbose) flag if supported."
-          if [[ -s "target_url.txt" ]] && [[ -s "$PARAM_WORDLIST_FILE" ]]; then
-            if [[ -n "${{ inputs.headers }}" ]]; then
-              x8 -u "$TARGET_URL" -w "$PARAM_WORDLIST_FILE" -X GET POST -H "${{ inputs.headers }}" -v | tee x8_output.txt || true # Add -v and allow failure to capture output
-            else
-              x8 -u "$TARGET_URL" -w "$PARAM_WORDLIST_FILE" -X GET POST -v | tee x8_output.txt || true # Add -v and allow failure to capture output
-            fi
+          # Check if input files exist and are not empty before running x8
+          if [[ -s "target_url.txt" ]] && [[ -s "param_wordlist.txt" ]]; then
+            echo "Running x8 with verbose output..."
+            # Execute x8, redirecting both stdout and stderr to stdout, then tee to file and console
+            # The '|| true' is to prevent the step from failing if x8 exits with a non-zero code.
+            x8 -u "$(cat target_url.txt)" -w param_wordlist.txt -v 2>&1 | tee x8-results-${{ matrix.chunk }}/x8-verbose.log || true
+            
             X8_EXIT_CODE=$?
             echo "x8 exited with code: $X8_EXIT_CODE"
-            # If x8 failed (non-zero exit code), print an error, but don't fail the step immediately
-            if [[ "$X8_EXIT_CODE" -ne 0 ]]; then
-              echo "WARNING: x8 command exited with a non-zero status code: $X8_EXIT_CODE"
+
+            echo "Raw x8 Scan Output (from tee file):"
+            cat x8-results-${{ matrix.chunk }}/x8-verbose.log || echo "x8-verbose.log not found or empty."
+
+            # Optional: Check if the desired string is in the log file
+            if grep -q "reflections: category" x8-results-${{ matrix.chunk }}/x8-verbose.log; then
+              echo "SUCCESS: 'reflections: category' found in x8 output."
+            else
+              echo "WARNING: 'reflections: category' NOT found in x8 output."
             fi
           else
-            echo "Error: target_url.txt or param_wordlist.txt is empty. Skipping x8 scan."
-            touch x8_output.txt # Create an empty file to prevent subsequent step errors
+            echo "ERROR: Input files target_url.txt or param_wordlist.txt are empty or not found."
+            touch x8-results-${{ matrix.chunk }}/x8-verbose.log # Ensure file exists even if inputs are bad
           fi
-          echo "x8 scan completed."
+        env:
+          # Explicitly set locale variables for the step
+          LANG: en_US.UTF-8
+          LC_ALL: en_US.UTF-8
+
 
       - name: Display raw x8 output
         run: |
