--- a/.github/workflows/x8-single-test.yaml
+++ b/.github/workflows/x8-single-test.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       domain:
-        description: 'Target domain (e.g., example.com)'
+        description: 'Target domain (e.g., https://bigdav.ir/test.php)'
         required: true
         type: string
         default: 'https://bigdav.ir/test.php'
@@ -64,6 +64,7 @@ jobs:
           echo "Headers provided: '$HEADERS'"
 
           RAW_RESPONSE=""
+          # Using if-else for conditional headers
           if [ -n "$HEADERS" ]; then
             echo "Executing curl command with headers..."
             RAW_RESPONSE=$(curl -k -s -X GET "$TARGET_URL" -H "$HEADERS")
@@ -90,7 +91,32 @@ jobs:
           mkdir -p x8-debug-results
           echo "Input files created: target_url.txt, param_wordlist.txt"
 
-      - name: Start tmate session for live debugging
-        uses: mxschmitt/action-tmate@v3
+      - name: Run x8 scanner (verbose & output to file)
+        id: x8-scan
+        run: |
+          set -euxo pipefail
+          # Ensure x8 is in PATH for this step
+          export PATH="$HOME/.cargo/bin:$PATH"
+          export LANG=en_US.UTF-8
+          export LC_ALL=en_US.UTF-8
+
+          echo "--- x8 scan start ---"
+          X8_COMMAND="x8 -u "$(cat target_url.txt)" -w param_wordlist.txt -v"
+          
+          # Add headers if provided
+          if [ -n "${{ github.event.inputs.headers }}" ]; then
+            X8_COMMAND="$X8_COMMAND -H \"${{ github.event.inputs.headers }}""
+          fi
+
+          echo "Executing command: $X8_COMMAND"
+          eval $X8_COMMAND 2>&1 | tee x8-debug-results/x8.log
+          echo "--- x8 scan end (exit code: $?) ---"
+        continue-on-error: true # Allow step to continue even if x8 exits with non-zero code
+
+      - name: Upload x8 Results Log
+        if: always() # Always run this step, even if previous steps failed
+        uses: actions/upload-artifact@v3
         with:
-          ssh: true
+          name: x8-debug-log
+          path: x8-debug-results/x8.log
+          retention-days: 7 # Optional: how long to keep the artifact
