--- a/.github/workflows/x8-single-test.yaml
+++ b/.github/workflows/x8-single-test.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Install x8 (cargo build)
         run: |
           set -euxo pipefail
-          # Check and install Rust toolchain if missing
+          # Install Rust if missing
           if ! command -v cargo >/dev/null 2>&1; then
             curl https://sh.rustup.rs -sSf | sh -s -- -y
             source "$HOME/.cargo/env"
@@ -76,19 +76,20 @@ jobs:
         id: x8-scan
         run: |
           set -euxo pipefail
-          # Ensure x8 in PATH
+          # Ensure x8 in PATH and correct locale
           export PATH="$HOME/.cargo/bin:$PATH"
           export LANG=en_US.UTF-8
           export LC_ALL=en_US.UTF-8
 
           echo "--- x8 scan start ---"
-          # Build x8 command as an array to avoid eval and quoting issues
-          cmd=(x8 -u "$(cat target_url.txt)" -w param_wordlist.txt -v)
+          # Build x8 command as array to avoid eval issues
+          cmd=(x8 -u "$(cat target_url.txt)" -w param_wordlist.txt -v -X GET)
+          # If you also want POST testing, use: cmd+=( -X GET POST )
           if [ -n "${{ github.event.inputs.headers }}" ]; then
             cmd+=( -H "${{ github.event.inputs.headers }}" )
           fi
           echo "Executing: ${cmd[*]}"
-          # Run the command, tee both stdout and stderr into the log file
+          # Run the command; tee both stdout and stderr into the log file
           "${cmd[@]}" 2>&1 | tee x8-debug-results/x8.log
           exit_code=${PIPESTATUS[0]}
           echo "--- x8 scan end (exit code: $exit_code) ---"
