--- a/.github/workflows/Dockerfile.test
+++ b/.github/workflows/Dockerfile.test
@@ -1,24 +1,42 @@
-# Use Ubuntu 22.04 as base
+# Dockerfile.test
+
+# Use official Ubuntu 22.04 as a base image
 FROM ubuntu:22.04
 
-# Install system dependencies
-RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y \
-      curl build-essential ca-certificates && \
-    rm -rf /var/lib/apt/lists/*
+# Ensure noninteractive installs and UTF-8 locale
+ENV DEBIAN_FRONTEND=noninteractive
+ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 
-# Install Rust toolchain (for cargo)
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    ca-certificates \
+    curl \
+    git \
+    golang-go \
+    libssl-dev \
+    pkg-config \
+    unzip \
+    wget \
+  && rm -rf /var/lib/apt/lists/*
+
+# Install Rust toolchain (for x8)
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+
+# Ensure cargo bin is on PATH
 ENV PATH="/root/.cargo/bin:${PATH}"
 
 # Install x8 via cargo
-RUN cargo install --force x8
+RUN cargo install x8
 
-# Verify x8 is installed
-RUN which x8 && x8 --version
+# Install httpx (ProjectDiscovery)
+RUN go install github.com/projectdiscovery/httpx/cmd/httpx@latest
 
-# Set working directory for testing
+# Install kxss
+RUN go install github.com/Emoe/kxss@latest
+
+# Set working directory for mounted volume
 WORKDIR /workspace
 
-# Default entrypoint to bash
+# Use bash as entrypoint for interactive commands
 ENTRYPOINT ["/bin/bash"]
